testsuite/tests/typecheck/should_fail/T7734.stderr

T7734.hs:4:13: error:
    • Occurs check: cannot construct the infinite type: t1 ~ t1 -> t2
    • In the first argument of ‘x’, namely ‘x’
      In the expression: x x
      In an equation for ‘f’: x `f` y = x x
    • Relevant bindings include
        x :: t1 -> t2 (bound at T7734.hs:4:1)
        f :: (t1 -> t2) -> t -> t2 (bound at T7734.hs:4:3)

T7734.hs:5:13: error:
    • Occurs check: cannot construct the infinite type: t1 ~ t1 -> t2
    • In the first argument of ‘x’, namely ‘x’
      In the expression: x x
      In an equation for ‘&’: (&) x y = x x
    • Relevant bindings include
        x :: t1 -> t2 (bound at T7734.hs:5:5)
        (&) :: (t1 -> t2) -> t -> t2 (bound at T7734.hs:5:1)
